--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,25 @@
 @import "tailwindcss";
+
+* {
+    font-family: "Segoe UI";
+}
+
+.nav-link {
+    @apply duration-200 cursor-pointer hover:text-gray-950 hover:text-[1.15rem] text-gray-500 font-medium relative h-fit py-1;
+}
+
+.nav-link.active {
+    @apply text-gray-950 text-[1.15rem] pb-1;
+}
+
+.nav-link::after {
+    @apply content-[""] duration-200 h-[3px] w-0 hover:w-full bg-gray-500 hover:bg-black absolute left-[50%] translate-x-[-50%] bottom-0;
+}
+
+.nav-link:hover.nav-link::after {
+    @apply w-[20px];
+}
+
+.nav-link.active::after {
+    @apply bg-gray-950 w-[20px];
+}
