--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 
 * {
     font-family: "Segoe UI";
+    scroll-behavior: smooth;
+    box-sizing: border-box;
 }
 
 html::-webkit-scrollbar {
@@ -17,15 +19,15 @@ html::-webkit-scrollbar-thumb {
 }
 
 .container {
-    @apply max-w-[1080px];
+    @apply max-w-[1200px];
 }
 
 section {
-    @apply m-16;
+    @apply my-[6rem];
 }
 
 .section-heading {
-    @apply font-bold text-3xl relative w-fit pb-3;
+    @apply font-bold text-3xl relative w-fit pb-3 mb-6;
 }
 
 .section-heading::after {
@@ -50,4 +52,16 @@ section {
 
 .nav-link.active::after {
     @apply bg-gray-950 w-[20px];
+}
+
+.service {
+    @apply flex justify-center flex-col bg-white p-6 h-full rounded-4xl shadow-xl;
+}
+
+.service svg {
+    @apply text-8xl;
+}
+
+.service h3 {
+    @apply text-2xl font-medium mt-6 mb-4;
 }
