--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,10 @@ html::-webkit-scrollbar-thumb {
     @apply scale-110 brightness-75;
 }
 
+.project:hover .project-img.diff {
+    @apply scale-[215%] brightness-75;
+}
+
 .project .image .project-img-link {
     @apply opacity-0 pointer-events-none absolute top-[50%] left-[50%] translate-[-50%] text-white text-5xl;
 }
