Make hero responsive and set default nav visibility state to false

--- a/src/index.css
+++ b/src/index.css
@@ -32,24 +32,29 @@ html::-webkit-scrollbar-thumb {
     @apply content-[""] h-1 w-[50%] bg-black absolute left-0 bottom-0;
 }
 
+.navbar {
+    @apply max-[769px]:translate-y-[-100%] max-[769px]:opacity-0 max-[769px]:duration-500;
+}
+
+.navbar.show {
+    @apply translate-y-[0] opacity-100 pointer-events-auto;
+}
+
 .nav-link {
-    @apply duration-200 cursor-pointer hover:text-gray-950 hover:text-xl text-gray-500 font-medium relative h-fit py-1;
+    @apply max-[769px]:py-4 duration-200 cursor-pointer hover:text-gray-950 max-[769px]:hover:bg-gray-300 max-[769px]:text-black max-[769px]:px-2 text-gray-500 font-medium relative h-fit py-1;
 }
 
 .nav-link.active {
-    @apply text-gray-950 text-xl pb-1;
+    @apply text-black min-[769px]:text-xl min-[769px]:pb-1 max-[769px]:bg-gray-400 max-[769px]:text-white text-xl;
 }
 
-.nav-link::after {
-    @apply content-[""] duration-200 h-[3px] w-0 hover:w-full bg-gray-500 hover:bg-black absolute left-[50%] translate-x-[-50%] bottom-0;
+.nav-link .border {
+    @apply duration-200 h-[3px] max-[769px]:hidden scale-x-0 w-[20px] hover:w-full bg-gray-500 hover:bg-black absolute left-[50%] translate-x-[-50%] bottom-0;
 }
 
-.nav-link:hover.nav-link::after {
-    @apply w-[20px] bg-black;
-}
-
-.nav-link.active::after {
-    @apply bg-gray-950 w-[20px];
+.nav-link.active .border,
+.nav-link:hover.nav-link .border {
+    @apply scale-x-100 bg-black;
 }
 
 .stack-track {
