--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ html::-webkit-scrollbar-thumb {
 }
 
 .container {
-    @apply max-w-[1280px] mx-8;
+    @apply max-w-[1280px] mx-8 max-[426px]:mx-6;
 }
 
 .section-heading {
@@ -135,7 +135,7 @@ html::-webkit-scrollbar-thumb {
 }
 
 .project .tags {
-    @apply flex gap-4 mb-6 flex-wrap;
+    @apply flex gap-4 mb-6 max-[426px]:mb-3 flex-wrap;
 }
 
 .project .tags span {
@@ -143,7 +143,7 @@ html::-webkit-scrollbar-thumb {
 }
 
 .project .btns {
-    @apply flex gap-4 justify-between;
+    @apply flex flex-wrap gap-4 justify-between;
 }
 
 .contact-medium {
