--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,14 @@ section.container-wrapper {
     @apply text-center;
 }
 
+.work-navlink {
+    @apply text-xl font-bold cursor-pointer px-6 py-3 hover:bg-gray-100 transition-all duration-200;
+}
+
+.work-navlink.active {
+    @apply text-white bg-black;
+}
+
 .project .image {
     @apply overflow-hidden w-full brightness-95 h-[20rem] max-[426px]:h-56 relative;
 }
@@ -150,4 +158,3 @@ section.container-wrapper {
 .contact-medium svg:nth-child(2) {
     @apply text-xl;
 }
-
