--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@ section.container-wrapper {
 }
 
 .work-navlink {
-    @apply text-xl font-bold cursor-pointer px-6 py-3 hover:bg-gray-100 transition-all duration-200;
+    @apply text-xl font-bold cursor-pointer px-6 max-[426px]:px-0 py-3 max-[426px]:py-4 hover:bg-gray-100 transition-all duration-200 max-[426px]:w-full max-[426px]:text-center;
 }
 
 .work-navlink.active {
