--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ html::-webkit-scrollbar-thumb {
     @apply bg-black;
 }
 
+body {
+    @apply overflow-x-hidden;
+}
+
 .container-wrapper {
     @apply flex justify-center;
 }
